--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <div class="col pt-2">
                     <div class="col-xl-4 btn btn-outline-primary" onClick="goCalculadora('5')" >5</div>
                     <div class="col-xl-4 btn btn-outline-secondary" onClick="goCalculadora('6')">6</div>
-                    <div class="col-xl-4 btn btn-primary mt-2" onClick="goCalculadora('+')" >+</div>
-                    <div class="col-xl-4 btn btn-secondary mt-2"  onClick="goCalculadora('-');">-</div>
+                    <div class="col-xl-4 btn btn-primary mt-2" onClick="goOperador('+')" >+</div>
+                    <div class="col-xl-4 btn btn-secondary mt-2"  onClick="goOperador('-');">-</div>
 
-                    <div class="col-xl-4 btn btn-dark mt-2"  onClick="goCalculadora('*')""">*</div>
-                    <div class="col-xl-4 btn btn-danger mt-2"  onClick="goCalculadora('/');">/</div>
+                    <div class="col-xl-4 btn btn-dark mt-2"  onClick="goOperador('*')""">*</div>
+                    <div class="col-xl-4 btn btn-danger mt-2"  onClick="goOperador('/');">/</div>
                     <div class="col-xl-8 btn btn-success mt-2"  onClick="goRespuesta('=');">=</div>
                     <div class="col-xl-8 btn btn-dark mt-2"  onClick="goBorrar('c');">C</div>
                 </div>
