--- a/index.html
+++ b/index.html
@@ -23,28 +23,27 @@
             </div>
             <div class="row">
                 <div class="col pt-2">
-                    <div class="col-xl-4 btn btn-outline-primary" onClick="goCalculadora('1');" >1</div>
-                    <div class="col-xl-4 btn btn-outline-secondary" onClick="goCalculadora('2');">2</div>
-                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('7');">7</div>
-                    <div class="col-xl-4 btn btn-outline-secondary mt-2" onClick="goCalculadora('8');">8</div>
+                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('7');" >7</div>
+                    <div class="col-xl-4 btn btn-outline-secondary mt-2" onClick="goCalculadora('4');">4</div>
+                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('1');">1</div>
+                    <div class="col-xl-4 btn btn-outline-secondary mt-2" onClick="goCalculadora('0');">0</div>
+                    <div class="col-xl-4 btn btn-primary mt-2" onClick="goCalculadora('+')" >+</div>
                 </div>
                 <div class="col pt-2">
-                    <div class="col-xl-4 btn btn-outline-primary" onClick="goCalculadora('3');">3</div>
-                    <div class="col-xl-4 btn btn-outline-secondary" onClick="goCalculadora('4');">4</div>
-                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('9');">9</div>
-                    <div class="col-xl-4 btn btn-outline-warning mt-2" onClick="goCalculadora('0');">0</div>
+                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('8');">8</div>
+                    <div class="col-xl-4 btn btn-outline-secondary mt-2" onClick="goCalculadora('5');">5</div>
+                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('2');">2</div>
+                    <div class="col-xl-4 btn btn-dark mt-2"  onClick="goCalculadora('*')">*</div>
+                    <div class="col-xl-4 btn btn-danger mt-2"  onClick="goCalculadora('/');">/</div>
                 </div>
                 <div class="col pt-2">
-                    <div class="col-xl-4 btn btn-outline-primary" onClick="goCalculadora('5')" >5</div>
-                    <div class="col-xl-4 btn btn-outline-secondary" onClick="goCalculadora('6')">6</div>
-                    <div class="col-xl-4 btn btn-primary mt-2" onClick="goOperador('+')" >+</div>
-                    <div class="col-xl-4 btn btn-secondary mt-2"  onClick="goOperador('-');">-</div>
-
-                    <div class="col-xl-4 btn btn-dark mt-2"  onClick="goOperador('*')""">*</div>
-                    <div class="col-xl-4 btn btn-danger mt-2"  onClick="goOperador('/');">/</div>
-                    <div class="col-xl-8 btn btn-success mt-2"  onClick="goRespuesta('=');">=</div>
-                    <div class="col-xl-8 btn btn-dark mt-2"  onClick="goBorrar('c');">C</div>
+                    <div class="col-xl-4 btn btn-outline-primary mt-2" onClick="goCalculadora('9')" >9</div>
+                    <div class="col-xl-4 btn btn-outline-secondary mt-2" onClick="goCalculadora('6')">6</div>
+                    <div class="col-xl-4 btn btn-outline-secondary mt-2" onClick="goCalculadora('3')">3</div>
+                    <div class="col-xl-4 btn btn-secondary mt-2"  onClick="goCalculadora('-');">-</div>                 
+                    <div class="col-xl-8 btn btn-dark mt-2"  onClick="goBorrar('c');">C</div>  
                 </div>
+                <div class="col-xl-8 btn btn-success mt-2"  onClick="goRespuesta('=');">=</div>
             </div>
         </div>
     </section>
